speckle-syntax/src/snapshots/speckle_syntax__item_speckle_attribute_tests__speckle_attribute_bare.snap
---
source: speckle-syntax/src/item_speckle_attribute_tests.rs
expression: "snapshot_speckle_attribute(\"#[speckle]\\nstruct Foo;\")"
---
byte_start: 0
byte_end: 10
arguments: []
